# control-expert-mcp

./: .gitignore  README.md  VISION.md  pyproject.toml
samples/: claude_desktop_config.json  vscode-mcp.json
src/control_expert_mcp/: __init__.py  bridge.py  constants.py  lang_reference.py  modbus.py  prompts.py  schema.py  server.py
tools/: attach_scadapack.py  harvest_demo.py  inventory_ref.py  jordan_lead_scraper.py  list_dtm_catalog.py  m580_dataset_ops.txt  one_of_everything.py  one_of_everything_r2.py  pserver_v14_api.txt  sim_commission.py  sim_dl_only.py  smoke_test.py  uf_sequence_proof.py  validate_templates.py  validate_types_anim.py
tools/bigtest/: 01_inventory.py  02_hardware.py  03_types.py  04_dtms.py  05_variables.py  06_sections.py  07_build.py  08_settings_build.py  09_cleanup_build.py  10_error_breakdown.py  WEAKNESSES_REPORT.md  common.py
tools/lang_refs/: DFB_AINPUT.xml  FBD_0_Mixer.xml  FBD_1_Forming.xml  FBD_2_Transportation_Belt.xml  IL_0_Alarming.xml  LD_0_Start_process.xml  LD_1_Heating.xml  LD_2_Packaging.xml  SFC_0_Packaging_Robot.xml  ST_0_Weighing_Material_A.xml  ST_1_Weighing_Material_B.xml  ST_2_Feeder.xml
