[project]
name = "control-expert-mcp"
version = "0.9.0"
description = "MCP server exposing EcoStruxure Control Expert (Unity Pro) to AI agents via the UDE COM automation API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "pywin32>=306; sys_platform == 'win32'",
    "pymodbus>=3.5,<4",
    "lxml>=5.0",
]

[project.scripts]
control-expert-mcp = "control_expert_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
